# credsift

./: .gitignore  LICENSE  README.md  SECURITY.md  credsift.db  pyproject.toml
.github/workflows/: ci.yml
credsift/: cli.py  db.py  deduplicator.py  enricher.py  parsers.py  reporter.py  scorer.py
docs/: ETHICS.md
tests/: test_db.py  test_deduplicator.py  test_enricher.py  test_parsers.py  test_reporter.py  test_scorer.py
tests/fixtures/: large_dump.txt  sample_create.py  sample_dump.txt
